fix noisy jvm wwarning